--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,45 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#161619" />
-    <meta name="description" content="Test your typing skills" />
+    <meta
+      name="description"
+      content="Practice your typing skills with the use of random quotes provided by one of the implemented API's."
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta property="og:url" content="https://typr.bystino.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Typr by Stino" />
+    <meta
+      property="og:description"
+      content="Practice your typing skills with the use of random quotes provided by one of the implemented API's."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/facebook.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@bystino" />
+    <meta name="twitter:creator" content="@gothematic" />
+    <meta property="og:url" content="http://typr.bystino.com" />
+    <meta property="og:title" content="Typr by Stino" />
+    <meta
+      property="og:description"
+      content="Practice your typing skills with the use of random quotes provided by one of the implemented API's."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/twitter.jpg" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon.jpg" or "favicon.jpg", "%PUBLIC_URL%/favicon.jpg" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
